Make LnF initialization more robust